// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Results renders List print mode without crashing 1`] = `
<div
  className="content_main list"
>
  <section
    className="print-info"
  >
    <p>
      <span>
        Dates:
      </span>
       
      7/10/2017 - 7/10/2020
    </p>
    <div>
      <div>
        Showing 
        <span>
          1
        </span>
         out of
        <span>
           
          100
           
        </span>
         total complaints 
      </div>
    </div>
  </section>
  <section
    className="list-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div>
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link export-btn"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="tabbed-navigation"
    >
      <section>
        <button
          className="trends tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 15 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.55 15.256H1.45a.554.554 0 0 1-.553-.554V3.168a.554.554 0 1 1 1.108 0v10.98h11.544a.554.554 0 0 1 0 1.108zM3.121 13.02V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.785 0V3.507a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v9.513zm2.785 0V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.786 0v-2.753a.476.476 0 0 1 .475-.475h.785a.476.476 0 0 1 .475.475v2.753z"
            />
          </svg>
          Trends
        </button>
        <button
          className="list tab active"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 14 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.85 4.836a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm1.13-8.692a1.03 1.03 0 0 1 1.029-1.029h7.173a1.03 1.03 0 1 1 0 2.058H5.009a1.03 1.03 0 0 1-1.03-1.029zm9.231 4.347a1.03 1.03 0 0 1-1.029 1.029H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03zm0 4.345a1.03 1.03 0 0 1-1.029 1.03H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03z"
            />
          </svg>
          List
        </button>
        <button
          className="map tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 16 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.084 15.2H.916a.264.264 0 0 1-.254-.42l2.36-4.492a.865.865 0 0 1 .696-.42h.827a9.51 9.51 0 0 0 .943 1.108H3.912l-1.637 3.116h11.45l-1.637-3.116h-1.34a9.481 9.481 0 0 0 .943-1.109h.591a.866.866 0 0 1 .696.421l2.36 4.492a.264.264 0 0 1-.254.42zM11.4 7.189c0 2.64-2.176 2.888-3.103 5.46a.182.182 0 0 1-.356 0c-.928-2.572-3.104-2.82-3.104-5.46a3.282 3.282 0 0 1 6.563 0zm-1.86-.005a1.425 1.425 0 1 0-1.425 1.425A1.425 1.425 0 0 0 9.54 7.184z"
            />
          </svg>
          Map
        </button>
      </section>
    </div>
    <div
      className="layout-row refine-bar"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="cf-select size"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-size"
        >
          Select the number of results to display at a time
        </label>
        <p>
          Show
        </p>
        <select
          id="choose-size"
          onChange={[Function]}
        >
          <option
            disabled={false}
            value="10"
          >
            10 results
          </option>
          <option
            disabled={false}
            value="25"
          >
            25 results
          </option>
          <option
            disabled={false}
            value="50"
          >
            50 results
          </option>
          <option
            disabled={false}
            value="100"
          >
            100 results
          </option>
        </select>
      </section>
      <section
        className="cf-select sort"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-sort"
        >
          Choose the order in which the results are displayed
        </label>
        <p>
          Sort
        </p>
        <select
          id="choose-sort"
          onChange={[Function]}
        >
          <option
            disabled={false}
            value="created_date_desc"
          >
            Newest to oldest
          </option>
          <option
            disabled={false}
            value="created_date_asc"
          >
            Oldest to newest
          </option>
          <option
            disabled={false}
            value="relevance_desc"
          >
            Relevance
          </option>
          <option
            disabled={false}
            value="relevance_asc"
          >
            Relevance (asc)
          </option>
        </select>
      </section>
      <section
        className="m-btn-group"
      >
        <p>
          Read
        </p>
        <button
          className="a-btn toggle-button deselected"
          id="refineAddNarrativesButton"
          onClick={[Function]}
        >
          Only complaints with narratives
        </button>
        <button
          className="a-btn toggle-button selected"
          id="refineRemoveNarrativesButton"
          onClick={[Function]}
        >
          All complaints
        </button>
      </section>
    </div>
    <ul
      className="cards-panel"
    >
      <li
        className="card-container"
      >
        <div
          className="card"
        >
          <div
            className="card-left layout-column"
          >
            <h3
              className="to-detail"
            >
              <a
                aria-label="Complaint 1"
                href="detail/1"
              >
                1
              </a>
            </h3>
            <h4
              tabIndex="0"
            >
              Company name
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "foo",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Company response to consumer
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Closed",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Timely response?
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "yes",
                }
              }
              tabIndex="0"
            />
          </div>
          <div
            className="card-right layout-column"
          >
            <div
              className="layout-row"
            >
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Date received:
                </h4>
                <span
                  className="body-copy"
                >
                  <span>
                    2/3/2013
                  </span>
                </span>
              </div>
              <div
                className="spacer"
              />
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Consumer's state:
                </h4>
                <span
                  className="body-copy"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "DC",
                    }
                  }
                  tabIndex="0"
                />
              </div>
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Product
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Bar",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-product:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Qaz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Issue
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Foo",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-issue:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Baz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <div>
              <br />
              <h4
                tabIndex="0"
              >
                Consumer Complaint Narrative
              </h4>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Lorem Ipsum",
                  }
                }
                tabIndex="0"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
    <nav
      aria-label="Pagination"
      className="m-pagination"
      role="navigation"
    >
      <button
        className="a-btn m-pagination_btn-prev"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="a-btn_icon a-btn_icon__on-left"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M494.5 1090.7c-17.3 0-33.8-6.8-46-19L19 642.1c-25.4-25.4-25.4-66.5 0-91.9l429.5-429.5c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L156.9 596.2l383.6 383.6c25.4 25.4 25.4 66.5.1 91.9-12.3 12.2-28.8 19-46.1 19z"
            />
          </svg>
        </span>
        Previous
      </button>
      <button
        className="a-btn m-pagination_btn-next"
        disabled={false}
        onClick={[Function]}
      >
        Next
        <span
          className="a-btn_icon a-btn_icon__on-right"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M65.1 1090.2c-35.9 0-65-29-65.1-64.9 0-17.3 6.8-33.9 19.1-46.1l383.6-383.5L19.1 212.2c-25.1-25.6-24.8-66.8.9-92 25.3-24.8 65.8-24.8 91.1 0l429.5 429.5c25.4 25.4 25.4 66.5 0 91.9L111 1071.2c-12.1 12.2-28.7 19.1-45.9 19z"
            />
          </svg>
        </span>
      </button>
      <div
        className="m-pagination_form"
      >
        <label
          className="m-pagination_label"
        >
          Page 
        </label>
      </div>
    </nav>
  </section>
  <section
    className="print-info-footer"
  >
    <p>
      <span>
        URL:
      </span>
       
      http://localhost/
    </p>
  </section>
</div>
`;

exports[`component:Results renders Map print mode without crashing 1`] = `
<div
  className="content_main map"
>
  <section
    className="print-info"
  >
    <p>
      <span>
        Dates:
      </span>
       
      7/10/2017 - 7/10/2020
    </p>
    <div>
      <div>
        Showing 
        <span>
          1
        </span>
         out of
        <span>
           
          100
           
        </span>
         total complaints 
      </div>
    </div>
  </section>
  <section
    className="map-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div>
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link export-btn"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="tabbed-navigation"
    >
      <section>
        <button
          className="trends tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 15 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.55 15.256H1.45a.554.554 0 0 1-.553-.554V3.168a.554.554 0 1 1 1.108 0v10.98h11.544a.554.554 0 0 1 0 1.108zM3.121 13.02V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.785 0V3.507a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v9.513zm2.785 0V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.786 0v-2.753a.476.476 0 0 1 .475-.475h.785a.476.476 0 0 1 .475.475v2.753z"
            />
          </svg>
          Trends
        </button>
        <button
          className="list tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 14 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.85 4.836a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm1.13-8.692a1.03 1.03 0 0 1 1.029-1.029h7.173a1.03 1.03 0 1 1 0 2.058H5.009a1.03 1.03 0 0 1-1.03-1.029zm9.231 4.347a1.03 1.03 0 0 1-1.029 1.029H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03zm0 4.345a1.03 1.03 0 0 1-1.029 1.03H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03z"
            />
          </svg>
          List
        </button>
        <button
          className="map tab active"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 16 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.084 15.2H.916a.264.264 0 0 1-.254-.42l2.36-4.492a.865.865 0 0 1 .696-.42h.827a9.51 9.51 0 0 0 .943 1.108H3.912l-1.637 3.116h11.45l-1.637-3.116h-1.34a9.481 9.481 0 0 0 .943-1.109h.591a.866.866 0 0 1 .696.421l2.36 4.492a.264.264 0 0 1-.254.42zM11.4 7.189c0 2.64-2.176 2.888-3.103 5.46a.182.182 0 0 1-.356 0c-.928-2.572-3.104-2.82-3.104-5.46a3.282 3.282 0 0 1 6.563 0zm-1.86-.005a1.425 1.425 0 1 0-1.425 1.425A1.425 1.425 0 0 0 9.54 7.184z"
            />
          </svg>
          Map
        </button>
      </section>
    </div>
    <div
      className="layout-row refine-bar"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="m-btn-group map-shading"
      >
        <p>
          Map shading
        </p>
        <button
          className="a-btn toggle-button raw selected"
          onClick={[Function]}
        >
          Complaints
        </button>
        <button
          className="a-btn toggle-button capita a-btn__disabled"
          onClick={[Function]}
        >
          Complaints per 1,000 
          <span>
            population
          </span>
        </button>
      </section>
    </div>
    <div>
      <div
        className="cfpb-chart print"
        data-chart-type="tile_map"
        id="tile-chart-map"
      />
    </div>
    <div
      className="map-toolbar"
    >
      <section
        className="state-heading"
      >
        <span>
          United States of America
        </span>
        <span>
          
        </span>
        
      </section>
      
    </div>
    <div
      className="row-chart-section"
    >
      <h3>
        Product by highest complaint volume 7/10/2017 to 7/10/2020
      </h3>
      <p>
        Product the consumer identified in the complaint. Click on a product to expand sub-products
      </p>
      <div
        id="row-chart-product"
      />
    </div>
  </section>
  <section
    className="print-info-footer"
  >
    <p>
      <span>
        URL:
      </span>
       
      http://localhost/
    </p>
  </section>
</div>
`;

exports[`component:Results renders list panel without crashing 1`] = `
<div
  className="content_main list"
>
  <section
    className="list-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div>
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link export-btn"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="tabbed-navigation"
    >
      <section>
        <button
          className="trends tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 15 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.55 15.256H1.45a.554.554 0 0 1-.553-.554V3.168a.554.554 0 1 1 1.108 0v10.98h11.544a.554.554 0 0 1 0 1.108zM3.121 13.02V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.785 0V3.507a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v9.513zm2.785 0V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.786 0v-2.753a.476.476 0 0 1 .475-.475h.785a.476.476 0 0 1 .475.475v2.753z"
            />
          </svg>
          Trends
        </button>
        <button
          className="list tab active"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 14 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.85 4.836a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm1.13-8.692a1.03 1.03 0 0 1 1.029-1.029h7.173a1.03 1.03 0 1 1 0 2.058H5.009a1.03 1.03 0 0 1-1.03-1.029zm9.231 4.347a1.03 1.03 0 0 1-1.029 1.029H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03zm0 4.345a1.03 1.03 0 0 1-1.029 1.03H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03z"
            />
          </svg>
          List
        </button>
        <button
          className="map tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 16 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.084 15.2H.916a.264.264 0 0 1-.254-.42l2.36-4.492a.865.865 0 0 1 .696-.42h.827a9.51 9.51 0 0 0 .943 1.108H3.912l-1.637 3.116h11.45l-1.637-3.116h-1.34a9.481 9.481 0 0 0 .943-1.109h.591a.866.866 0 0 1 .696.421l2.36 4.492a.264.264 0 0 1-.254.42zM11.4 7.189c0 2.64-2.176 2.888-3.103 5.46a.182.182 0 0 1-.356 0c-.928-2.572-3.104-2.82-3.104-5.46a3.282 3.282 0 0 1 6.563 0zm-1.86-.005a1.425 1.425 0 1 0-1.425 1.425A1.425 1.425 0 0 0 9.54 7.184z"
            />
          </svg>
          Map
        </button>
      </section>
    </div>
    <div
      className="layout-row refine-bar"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="cf-select size"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-size"
        >
          Select the number of results to display at a time
        </label>
        <p>
          Show
        </p>
        <select
          id="choose-size"
          onChange={[Function]}
        >
          <option
            disabled={false}
            value="10"
          >
            10 results
          </option>
          <option
            disabled={false}
            value="25"
          >
            25 results
          </option>
          <option
            disabled={false}
            value="50"
          >
            50 results
          </option>
          <option
            disabled={false}
            value="100"
          >
            100 results
          </option>
        </select>
      </section>
      <section
        className="cf-select sort"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-sort"
        >
          Choose the order in which the results are displayed
        </label>
        <p>
          Sort
        </p>
        <select
          id="choose-sort"
          onChange={[Function]}
        >
          <option
            disabled={false}
            value="created_date_desc"
          >
            Newest to oldest
          </option>
          <option
            disabled={false}
            value="created_date_asc"
          >
            Oldest to newest
          </option>
          <option
            disabled={false}
            value="relevance_desc"
          >
            Relevance
          </option>
          <option
            disabled={false}
            value="relevance_asc"
          >
            Relevance (asc)
          </option>
        </select>
      </section>
      <section
        className="m-btn-group"
      >
        <p>
          Read
        </p>
        <button
          className="a-btn toggle-button deselected"
          id="refineAddNarrativesButton"
          onClick={[Function]}
        >
          Only complaints with narratives
        </button>
        <button
          className="a-btn toggle-button selected"
          id="refineRemoveNarrativesButton"
          onClick={[Function]}
        >
          All complaints
        </button>
      </section>
    </div>
    <ul
      className="cards-panel"
    >
      <li
        className="card-container"
      >
        <div
          className="card"
        >
          <div
            className="card-left layout-column"
          >
            <h3
              className="to-detail"
            >
              <a
                aria-label="Complaint 1"
                href="detail/1"
              >
                1
              </a>
            </h3>
            <h4
              tabIndex="0"
            >
              Company name
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "foo",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Company response to consumer
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Closed",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Timely response?
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "yes",
                }
              }
              tabIndex="0"
            />
          </div>
          <div
            className="card-right layout-column"
          >
            <div
              className="layout-row"
            >
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Date received:
                </h4>
                <span
                  className="body-copy"
                >
                  <span>
                    2/3/2013
                  </span>
                </span>
              </div>
              <div
                className="spacer"
              />
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Consumer's state:
                </h4>
                <span
                  className="body-copy"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "DC",
                    }
                  }
                  tabIndex="0"
                />
              </div>
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Product
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Bar",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-product:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Qaz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Issue
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Foo",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-issue:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Baz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <div>
              <br />
              <h4
                tabIndex="0"
              >
                Consumer Complaint Narrative
              </h4>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Lorem Ipsum",
                  }
                }
                tabIndex="0"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
    <nav
      aria-label="Pagination"
      className="m-pagination"
      role="navigation"
    >
      <button
        className="a-btn m-pagination_btn-prev"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="a-btn_icon a-btn_icon__on-left"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M494.5 1090.7c-17.3 0-33.8-6.8-46-19L19 642.1c-25.4-25.4-25.4-66.5 0-91.9l429.5-429.5c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L156.9 596.2l383.6 383.6c25.4 25.4 25.4 66.5.1 91.9-12.3 12.2-28.8 19-46.1 19z"
            />
          </svg>
        </span>
        Previous
      </button>
      <button
        className="a-btn m-pagination_btn-next"
        disabled={false}
        onClick={[Function]}
      >
        Next
        <span
          className="a-btn_icon a-btn_icon__on-right"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M65.1 1090.2c-35.9 0-65-29-65.1-64.9 0-17.3 6.8-33.9 19.1-46.1l383.6-383.5L19.1 212.2c-25.1-25.6-24.8-66.8.9-92 25.3-24.8 65.8-24.8 91.1 0l429.5 429.5c25.4 25.4 25.4 66.5 0 91.9L111 1071.2c-12.1 12.2-28.7 19.1-45.9 19z"
            />
          </svg>
        </span>
      </button>
      <div
        className="m-pagination_form"
      >
        <label
          className="m-pagination_label"
        >
          Page 
        </label>
      </div>
    </nav>
  </section>
</div>
`;

exports[`component:Results renders map panel without crashing 1`] = `
<div
  className="content_main map"
>
  <section
    className="map-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div>
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link export-btn"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="tabbed-navigation"
    >
      <section>
        <button
          className="trends tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 15 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.55 15.256H1.45a.554.554 0 0 1-.553-.554V3.168a.554.554 0 1 1 1.108 0v10.98h11.544a.554.554 0 0 1 0 1.108zM3.121 13.02V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.785 0V3.507a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v9.513zm2.785 0V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.786 0v-2.753a.476.476 0 0 1 .475-.475h.785a.476.476 0 0 1 .475.475v2.753z"
            />
          </svg>
          Trends
        </button>
        <button
          className="list tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 14 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.85 4.836a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm1.13-8.692a1.03 1.03 0 0 1 1.029-1.029h7.173a1.03 1.03 0 1 1 0 2.058H5.009a1.03 1.03 0 0 1-1.03-1.029zm9.231 4.347a1.03 1.03 0 0 1-1.029 1.029H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03zm0 4.345a1.03 1.03 0 0 1-1.029 1.03H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03z"
            />
          </svg>
          List
        </button>
        <button
          className="map tab active"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 16 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.084 15.2H.916a.264.264 0 0 1-.254-.42l2.36-4.492a.865.865 0 0 1 .696-.42h.827a9.51 9.51 0 0 0 .943 1.108H3.912l-1.637 3.116h11.45l-1.637-3.116h-1.34a9.481 9.481 0 0 0 .943-1.109h.591a.866.866 0 0 1 .696.421l2.36 4.492a.264.264 0 0 1-.254.42zM11.4 7.189c0 2.64-2.176 2.888-3.103 5.46a.182.182 0 0 1-.356 0c-.928-2.572-3.104-2.82-3.104-5.46a3.282 3.282 0 0 1 6.563 0zm-1.86-.005a1.425 1.425 0 1 0-1.425 1.425A1.425 1.425 0 0 0 9.54 7.184z"
            />
          </svg>
          Map
        </button>
      </section>
    </div>
    <div
      className="layout-row refine-bar"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="m-btn-group map-shading"
      >
        <p>
          Map shading
        </p>
        <button
          className="a-btn toggle-button raw selected"
          onClick={[Function]}
        >
          Complaints
        </button>
        <button
          className="a-btn toggle-button capita a-btn__disabled"
          onClick={[Function]}
        >
          Complaints per 1,000 
          <span>
            population
          </span>
        </button>
      </section>
    </div>
    <div>
      <div
        className="cfpb-chart "
        data-chart-type="tile_map"
        id="tile-chart-map"
      />
    </div>
    <div
      className="map-toolbar"
    >
      <section
        className="state-heading"
      >
        <span>
          United States of America
        </span>
        <span>
          
        </span>
        
      </section>
      
    </div>
    <div
      className="row-chart-section"
    >
      <h3>
        Product by highest complaint volume 7/10/2017 to 7/10/2020
      </h3>
      <p>
        Product the consumer identified in the complaint. Click on a product to expand sub-products
      </p>
      <div
        id="row-chart-product"
      />
    </div>
  </section>
</div>
`;

exports[`component:Results renders trends panel without crashing 1`] = `
<div
  className="content_main trends"
>
  <section
    className="trends-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div>
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link export-btn"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="tabbed-navigation"
    >
      <section>
        <button
          className="trends tab active"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 15 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.55 15.256H1.45a.554.554 0 0 1-.553-.554V3.168a.554.554 0 1 1 1.108 0v10.98h11.544a.554.554 0 0 1 0 1.108zM3.121 13.02V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.785 0V3.507a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v9.513zm2.785 0V6.888a.476.476 0 0 1 .475-.475h.786a.476.476 0 0 1 .475.475v6.132zm2.786 0v-2.753a.476.476 0 0 1 .475-.475h.785a.476.476 0 0 1 .475.475v2.753z"
            />
          </svg>
          Trends
        </button>
        <button
          className="list tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 14 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.85 4.836a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm0 4.346a1.03 1.03 0 0 1-1.029 1.03h-.003a1.03 1.03 0 1 1 0-2.059h.003a1.03 1.03 0 0 1 1.03 1.03zm1.13-8.692a1.03 1.03 0 0 1 1.029-1.029h7.173a1.03 1.03 0 1 1 0 2.058H5.009a1.03 1.03 0 0 1-1.03-1.029zm9.231 4.347a1.03 1.03 0 0 1-1.029 1.029H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03zm0 4.345a1.03 1.03 0 0 1-1.029 1.03H5.009a1.03 1.03 0 1 1 0-2.059h7.173a1.03 1.03 0 0 1 1.03 1.03z"
            />
          </svg>
          List
        </button>
        <button
          className="map tab"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 16 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.084 15.2H.916a.264.264 0 0 1-.254-.42l2.36-4.492a.865.865 0 0 1 .696-.42h.827a9.51 9.51 0 0 0 .943 1.108H3.912l-1.637 3.116h11.45l-1.637-3.116h-1.34a9.481 9.481 0 0 0 .943-1.109h.591a.866.866 0 0 1 .696.421l2.36 4.492a.264.264 0 0 1-.254.42zM11.4 7.189c0 2.64-2.176 2.888-3.103 5.46a.182.182 0 0 1-.356 0c-.928-2.572-3.104-2.82-3.104-5.46a3.282 3.282 0 0 1 6.563 0zm-1.86-.005a1.425 1.425 0 1 0-1.425 1.425A1.425 1.425 0 0 0 9.54 7.184z"
            />
          </svg>
          Map
        </button>
      </section>
    </div>
    <div
      className="layout-row refine-bar"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
          >
            Filter results
          </button>
        </div>
      </section>
      <section
        className="cf-select lens"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-lens"
        >
          Aggregate complaints by
        </label>
        <p>
          Aggregate by
        </p>
        <select
          id="choose-lens"
          onChange={[Function]}
          value="Overview"
        >
          <option
            disabled={false}
            value="Overview"
          >
            Overview
          </option>
          <option
            disabled={false}
            value="Company"
          >
            Company
          </option>
          <option
            disabled={false}
            value="Product"
          >
            Product
          </option>
        </select>
      </section>
      <span
        className="separator"
      />
      <section
        className="cf-select interval"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-interval"
        >
          Choose the Date interval
        </label>
        <p>
          Date interval
        </p>
        <select
          id="choose-interval"
          onChange={[Function]}
        >
          <option
            disabled={true}
            value="Day"
          >
            Day
          </option>
          <option
            disabled={false}
            value="Week"
          >
            Week
          </option>
          <option
            disabled={false}
            value="Month"
          >
            Month
          </option>
          <option
            disabled={false}
            value="Quarter"
          >
            Quarter
          </option>
          <option
            disabled={false}
            value="Year"
          >
            Year
          </option>
        </select>
      </section>
    </div>
  </section>
</div>
`;
